--- a/.github/workflows/deploy-uat.yml
+++ b/.github/workflows/deploy-uat.yml
@@ -17,7 +17,10 @@ jobs:
         run: npm install -g sfdx-cli  # Instalează Salesforce CLI
 
       - name: Authenticate with UAT Org
-        run: echo ${{ secrets.SF_AUTH_UAT }} | base64 --decode > authUAT.json && sfdx auth:sfdxurl:store -f authUAT.json -s -a UAT
+        run: |
+          echo "${{ secrets.SF_AUTH_UAT }}" | base64 --decode > authUAT.json
+          cat authUAT.json  # Opțional, pentru debug, vezi dacă fișierul are conținut
+          sfdx auth:sfdxurl:store -f authUAT.json -s -a UAT
 
       - name: Deploy to UAT
         run: sfdx force:source:deploy -u UAT --manifest manifest/package.xml  # Deployează pachetul în UAT
