Commit to DevPro

--- a/.github/workflows/deploy-uat.yml
+++ b/.github/workflows/deploy-uat.yml
@@ -22,4 +22,4 @@ jobs:
 
       - name: 'Validate' 
         run: |
-          sf project deploy start -d force-app/ --test-level NoTestRun
+          sf project deploy start -d force-app/ --test-level RunSpecifiedTests --tests "AccountTrigger_Test" -w 30
